--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electron</title>
+    <title>TEST </title>
 </head>
 
 <body>
-    <h1></h1>
+    <h1>Esto funciona? </h1>
 </body>
 
 </html>
